tests/baselines/reference/esmModuleExports1.errors.txt
/importer-cts.cts(10,10): error TS2614: Module '"./exporter.mjs"' has no exported member 'Oops'. Did you mean to use 'import Oops from "./exporter.mjs"' instead?


==== /importer-cjs.cjs (0 errors) ====
    const Foo = require("./exporter.mjs");
    new Foo();
    
==== /importer-cts.cts (1 errors) ====
    import Foo = require("./exporter.mjs");
    new Foo();
    
    import Foo2 from "./exporter.mjs";
    new Foo2();
    
    import * as Foo3 from "./exporter.mjs";
    new Foo3();
    
    import { Oops } from "./exporter.mjs";
             ~~~~
!!! error TS2614: Module '"./exporter.mjs"' has no exported member 'Oops'. Did you mean to use 'import Oops from "./exporter.mjs"' instead?
    
==== /exporter.mts (0 errors) ====
    export default class Foo {}
    export { Foo as "module.exports" };